Fix the overflow issue by lower down the margin

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -121,7 +121,7 @@ i {
 
 /* Content styling */
 .content-default {
-    margin: 20px 20px 20px 20px;
+    margin: 20px 0 20px 0;
 }
 
 h4 {
@@ -143,6 +143,10 @@ h6 {
 
 .text-small {
     font-size: xx-small;
+}
+
+.intro {
+    margin-left: 20px;
 }
 
 .intro-title {
